--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   table_calendar: ^2.3.1
   syncfusion_flutter_datepicker: ^18.3.52-beta
   flutter_time_picker_spinner: ^1.0.6+1
+  cloud_firestore: 
+  firebase_database: ^3.1.6
+  firebase_core: ^0.4.4+3
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
