--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cloud_firestore: 
   firebase_database: ^3.1.6
   firebase_core: ^0.4.4+3
+  android_alarm_manager: 0.4.5+20
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
