--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   rxdart: ^0.22.0
-  provider: ^3.0.0+1
+  provider: ^5.0.0
   shared_preferences: 0.5.2
   flutter_local_notifications:
   flare_flutter:
@@ -33,7 +33,10 @@ dependencies:
       ref: dev
       path: flare_flutter
   hexcolor: ^1.0.6
-  flutter_svg: ^0.19.1
+  flutter_svg:
+    git:
+      url: git://github.com/gskinnerTeam/flutter_svg.git
+      ref: 12b55b464d2e253f411a17798527a7daa2c00ceb
   flutter_countdown_timer: ^1.3.0
   timer_builder: ^1.3.0
   countdown_flutter: ^0.1.2
@@ -62,7 +65,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon" 
   ios: false
-  image_path: "assets/logo/Mediminder_Logo.png"
+  image_path: "assets/logo/medicon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -82,6 +85,7 @@ flutter:
      - assets/logo/Mediminder_Logo.png
      - assets/gif/medgifhome.gif
      - assets/gif/nomed.gif
+     - assets/logo/medicon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
